# strack-gui

strack-app/: CMakeLists.txt
strack-app/include/Themes/: LightTheme.h  Theme.h
strack-app/include/Windows/MainWindow/: MainWindow.h
strack-app/include/Windows/MainWindow/Components/: CodeEditorWidget.h  FileExplorerWidget.h
strack-app/include/Windows/MainWindow/Components/ContentWidget/: ContentWidget.h
strack-app/include/Windows/MainWindow/Components/ContentWidget/Components/: CodeEditorView.h  ContentView.h
strack-app/src/: CMakeLists.txt  strack-gui.cpp  strack-gui.h
strack-app/src/Themes/: DarkTheme.cpp  DarkTheme.h  LightTheme.cpp
strack-app/src/Windows/MainWindow/: MainWindow.cpp  MainWindow.h
strack-app/src/Windows/MainWindow/components/: ApplicationMenuBar.cpp  ApplicationMenuBar.h  CodeEditorWidget.cpp  ControlStripWidget.cpp  ControlStripWidget.h  FileExplorerWidget.cpp
strack-app/src/Windows/MainWindow/components/ContentWidget/: ContentWidget.cpp
strack-app/src/Windows/MainWindow/components/ContentWidget/Components/: CodeEditorView.cpp
strack-app/src/Windows/SettingsWindow/: SettingsWindow.cpp  SettingsWindow.h
strack-app/src/Windows/StartupWindow/: StartupWindow.cpp  StartupWindow.h
strack-app/src/Windows/StartupWindow/Components/: ProjectActionsWidget.cpp  ProjectActionsWidget.h  RecentProjectsWidget.cpp  RecentProjectsWidget.h
strack-gui/: CMakeLists.txt  CMakePresets.json
strack-gui/strack-gui/: CMakeLists.txt  strack-gui.cpp  strack-gui.h
